Fix crash in xmlnodelist_QueryInterface. Solves CORE-6665.

svn path=/trunk/; revision=57310